# led-client

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  alpha_map.h  apa102.h  deploy.sh  main.cpp  spotify_client.cpp  spotify_client.h
scripts/: clear.py
src/: CMakeLists.txt  alpha_map.h  apa102.cpp  apa102.h  main.cpp  spotify_client.cpp  spotify_client.h  spotiled.cpp  spotiled.h  time_of_day_brightness.h
src/apa102/: CMakeLists.txt  apa102.cpp  apa102.h
src/apps/: CMakeLists.txt
src/apps/draw/: CMakeLists.txt  draw_service.cpp  draw_service.h
src/apps/flag/: CMakeLists.txt  flag_service.cpp  flag_service.h
src/apps/settings/: CMakeLists.txt  brightness_provider.h  display.cpp  display.h  time_of_day_brightness.h
src/apps/spotify/: CMakeLists.txt  authenticator_presenter.cpp  authenticator_presenter.h  jq_util.cpp  jq_util.h  now_playing_presenter.cpp  now_playing_presenter.h  now_playing_service.cpp  now_playing_service.h  service.cpp  service.h  spotify_client.cpp  spotify_client.h
src/apps/spotify/tests/: CMakeLists.txt  spotify_client_test.cpp
src/apps/text/: CMakeLists.txt  text_service.cpp  text_service.h
src/apps/ui/: CMakeLists.txt  ui_service.cpp  ui_service.h
src/apps/weather/: CMakeLists.txt  font.cpp  weather.cpp
src/apps/web_proxy/: CMakeLists.txt  display.cpp  display.h  state_thingy.cpp  state_thingy.h  web_proxy.cpp  web_proxy.h
src/async/: CMakeLists.txt  scheduler.cpp  scheduler.h
src/async/tests/: CMakeLists.txt  scheduler_test.cpp
src/color/: CMakeLists.txt  color.h
src/csignal/: CMakeLists.txt  signal_catcher.cpp  signal_catcher.h
src/encoding/: CMakeLists.txt
src/font/: CMakeLists.txt  font.cpp  font.h
src/font/tests/: CMakeLists.txt  font_test.cpp
src/http/: CMakeLists.txt  http.cpp  http.h  util.cpp  util.h
src/http/server/: CMakeLists.txt  server.cpp  server.h
src/http/tests/: CMakeLists.txt  http_test.cpp
src/ikea/: CMakeLists.txt  button_reader.cpp  button_reader.h  ikea.cpp  ikea.h  main.cpp
src/jq/: CMakeLists.txt  jq_util.cpp
src/led/: CMakeLists.txt  led.h
src/present/: CMakeLists.txt  presenter.cpp  presenter.h  rolling_presenter.cpp  rolling_presenter.h
src/program_options/: CMakeLists.txt  program_options.cpp  program_options.h
src/render/: CMakeLists.txt  renderer.h  renderer_impl.cpp  renderer_impl.h  time_of_day_brightness.h
src/server/: server.cpp  server.h
src/service/: service_registry.cpp  service_registry.h  service_runner.cpp  service_runner.h
src/service/test/: service_registry_test.cpp
src/settings/: CMakeLists.txt  display.cpp  display.h  settings.h  updater.cpp  updater.h
src/spotiled/: CMakeLists.txt  brightness_provider.cpp  main.cpp  renderer.h  renderer_impl.cpp  renderer_impl.h  spotiled.cpp  spotiled.h  time_of_day_brightness.h
src/storage/: CMakeLists.txt  string_set.cpp
src/storage/tests/: CMakeLists.txt  string_set_test.cpp
src/tests/storage/: string_set_test.cpp
src/uri/: CMakeLists.txt  uri.cpp  uri.h
src/uri/tests/: CMakeLists.txt  uri_test.cpp
src/url/: url.cpp
src/util/: CMakeLists.txt  color.h  presenter.cpp  presenter.h  signal_handler.h  text_prompt.cpp  text_prompt.h  url.h
src/util/apa102/: CMakeLists.txt  apa102.cpp  apa102.h
src/util/color/: CMakeLists.txt  color.h
src/util/csignal/: CMakeLists.txt  signal_handler.cpp  signal_handler.h
src/util/encoding/: base64.h
src/util/gfx/: CMakeLists.txt  gfx.cpp  gfx.h
src/util/jq/: CMakeLists.txt  jq_util.h
src/util/page/: CMakeLists.txt  page.h
src/util/spotiled/: CMakeLists.txt  brightness_provider.h  spotiled.cpp  spotiled.h  time_of_day_brightness.h
src/util/storage/: string_set.h
src/util/storage/tests/: CMakeLists.txt  string_set_test.cpp
src/util/url/: CMakeLists.txt  url.cpp  url.h
src/web_proxy/: CMakeLists.txt  display.cpp  display.h  state_thingy.cpp  state_thingy.h  web_proxy.cpp  web_proxy.h
