add_subdirectory(apa102)
add_subdirectory(async)
add_subdirectory(color)
add_subdirectory(csignal)
add_subdirectory(encoding)
add_subdirectory(http)
add_subdirectory(ikea)
add_subdirectory(jq)
add_subdirectory(led)
add_subdirectory(program_options)
add_subdirectory(render)
add_subdirectory(settings)
add_subdirectory(spotiled)
add_subdirectory(storage)
add_subdirectory(uri)
add_subdirectory(web_proxy)
